# druid-pane-demo

./: Cargo.toml  README.md
src/: main.rs  pane_dock_widget.rs  pane_header_widget.rs  pane_widget.rs
